[tool.poetry]
name = "nonebot-plugin-yuefu"
version = "0.1.0"
description = "AI乐府Nonebot插件"
authors = ["Chengzhi <zmq175@qq.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_yuefu"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
