[tool.poetry]
name = "nonebot-plugin-yuefu"
version = "0.1.1"
description = "AI乐府Nonebot插件"
authors = ["Chengzhi <zmq175@qq.com>"]
readme = "README.md"
packages = [{include = "nonebot_plugin_yuefu"}]

[tool.poetry.dependencies]
python = "^3.9"
nonebot2="^2.0.0b1"
nonebot-adapter-onebot = "^2.0.0-beta.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
